DSND-2876: Update structured logging implementation (#65)
* DSND-2876: Update structured logging

* DSND-2876: Remove redundant logger