@@ -1,6 +1,7 @@
 package uk.gov.companieshouse.psc.delta.mapper;
 
 import static java.util.Map.entry;
+import static uk.gov.companieshouse.psc.delta.PscDeltaConsumerApplication.NAMESPACE;
 
 import consumer.exception.NonRetryableErrorException;
 import java.time.LocalDate;
@@ -12,16 +13,20 @@ import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 import org.apache.commons.codec.digest.DigestUtils;
-import org.springframework.stereotype.Component;
+import uk.gov.companieshouse.logging.Logger;
+import uk.gov.companieshouse.logging.LoggerFactory;
+import uk.gov.companieshouse.psc.delta.logging.DataMapHolder;
 
-@Component
-public class MapperUtils {
+public final class MapperUtils {
 
-    public static final String TIME_START_OF_DAY = "000000";
-    public static final String DATE_PATTERN = "yyyyMMdd";
-    public static final String DATETIME_PATTERN = "yyyyMMddHHmmss";
-    public static final DateTimeFormatter UTC_DATETIME_FORMATTER =
+    private static final Logger LOGGER = LoggerFactory.getLogger(NAMESPACE);
+    private static final String TIME_START_OF_DAY = "000000";
+    private static final String DATETIME_PATTERN = "yyyyMMddHHmmss";
+    private static final DateTimeFormatter UTC_DATETIME_FORMATTER =
             DateTimeFormatter.ofPattern(DATETIME_PATTERN, Locale.UK).withZone(ZoneId.of("UTC"));
+
+    private MapperUtils() {
+    }
 
     /**
      * Parse a date string (expected format: DATE_PATTERN). Implementation note: Instant conversion requires input level of detail
@@ -31,19 +36,18 @@ public class MapperUtils {
      * @return the LocalDate corresponding to the parsed string (at UTC by definition)
      * @throws NonRetryableErrorException if date parsing fails
      */
-
     public static LocalDate parseLocalDate(String rawDateString)
             throws NonRetryableErrorException {
-        return convertToLocalDate(rawDateString + TIME_START_OF_DAY, DATE_PATTERN);
+        return convertToLocalDate(rawDateString + TIME_START_OF_DAY);
     }
 
-    private static LocalDate convertToLocalDate(final String s, final String effectivePattern)
-            throws NonRetryableErrorException {
+    private static LocalDate convertToLocalDate(final String date) {
         try {
-            return LocalDate.parse(s, UTC_DATETIME_FORMATTER);
+            return LocalDate.parse(date, UTC_DATETIME_FORMATTER);
         } catch (DateTimeParseException exception) {
-            throw new NonRetryableErrorException(String.format("%s: date/time pattern not matched:"
-                    + " [%s]", effectivePattern), null);
+            final String msg = "Failed to parse date/time: [%s]".formatted(date);
+            LOGGER.error(msg, DataMapHolder.getLogMap());
+            throw new NonRetryableErrorException(msg, exception);
         }
     }
 
